# soci-daemon

./: daemon.py  pyproject.toml  requirements.txt
